--- a/desafios/desafio1/index.html
+++ b/desafios/desafio1/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 1</title>
 </head>
+
 <body>
     <section id="cadastro">
-        
+
         <h2>Cadastro de Professor</h2>
 
         <form action="" id="form" name="form">
@@ -22,7 +24,7 @@
             <input type="number" id="idade" name="idade" required> <br>
 
             <label for="materia">Para qual matéria você está se candidatando para lecionar:</label>
-            <select name="materia" id="materia">
+            <select name="materia" id="materia" required>
                 <option value="matematica">Matemática</option>
                 <option value="portugues">Português</option>
                 <option value="biologia">Biologia</option>
@@ -33,7 +35,7 @@
             </select> <br>
 
             <label for="escolaridade">Nível de escolaridade:</label>
-            <select name="escolaridade" id="escolaridade">
+            <select name="escolaridade" id="escolaridade" required>
                 <option value="superiorcompleto">Ensino superior completo</option>
                 <option value="mestradocursando">Cursando mestrado</option>
                 <option value="mestradocompleto">Mestrado completo</option>
@@ -42,7 +44,7 @@
             </select> <br>
 
             <label for="descricao">Descrição sobre si mesmo: </label> <br>
-            <textarea name="descricao" id="descricao" cols="20" rows="5"></textarea> <br>
+            <textarea name="descricao" id="descricao" cols="20" rows="5" required></textarea> <br>
 
             <input type="submit" value="Enviar mensagem">
 
@@ -50,4 +52,5 @@
 
     </section>
 </body>
+
 </html>
