--- a/desafios/desafio2/index.html
+++ b/desafios/desafio2/index.html
@@ -7,14 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Texto parágrafo</p>
-    <div>
-        <p>
-        Texto parágrafo 2
-        <a href="#">Link</a> <br>
-    </p>
-    </div>
-    <a href="#">Link</a> <br>
-    <a href="#">Link</a> <br>
+    <p>Texto de exemplo</p>
+    <p class="paragraph">Parágrafo 2</p>
+    <p id="paragraph">Parágrafo 3</p>
 </body>
 </html>
